AC_PREREQ([2.64])
AC_INIT([My Bittorrent], [1.0], [], [my-bittorrent], [acu.epita.fr])

AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])

AC_PROG_CC_C99


# check for libraries
AC_CHECK_HEADERS([stdio.h])
AC_CHECK_HEADERS([stdlib.h])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
